--- a/WebApplication2/appsettings.Development.json
+++ b/WebApplication2/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OpenAI": {
+    "ApiKey": "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"
   }
 }
